# release_helper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yaml  action.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  queries.graphql  requirements.txt  ruff.toml  taskfile.sh
.github/: release-drafter.yml
.github/actions/release_helper_action/: action.yml
.github/workflows/: ci.yml  drafter.yml  linting.yml  release-drafter.yml  update-major-version-tag.yml
graphql_client/: __init__.py  client.py  exceptions.py  input_types.py  issue_update.py  scalars.py
release_helper/: exceptions.py  github.py  linear.py  main.py  slack.py
release_helper/graphql_client/: base_client.py  base_model.py  issue.py  state.py
release_helper/issue_management/linear/: __init__.py  graphql_generator.toml  schema.graphql
release_helper/issue_management/linear/graphql_client/: __init__.py  base_client.py  client.py  enums.py  input_types.py  issue.py  issue_update.py  state.py
release_helper/messaging/: slack.py
src/: main.py
src/issue_management/linear/: __init__.py
src/issue_management/linear/graphql_client/: __init__.py  base_client.py  base_model.py  client.py  enums.py  exceptions.py  input_types.py
src/release_helper/: __init__.py  exceptions.py  main.py  settings.py
src/release_helper/issue_management/linear/: __init__.py  graphql_generator.toml  queries.graphql
src/release_helper/messaging/: slack.py
src/release_helper/source_control/: github.py
src/source_control/: github.py
(+7 files in other folders)
