[tool.poetry]
name = "release_helper"
version = "1.1.1"
description = "A tool to check related tickets are in a ready state for deployment."
authors = ["jason davila <jason@noviconnect.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyGithub = "^2.3.0"
requests = "^2.32.3"
slack-sdk = "^3.28.0"
pydantic = "^2.7.4"


[tool.poetry.group.development.dependencies]
ariadne-codegen = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
